--- a/report/report.tex
+++ b/report/report.tex
@@ -57,11 +57,11 @@
 	рассмотренных подходов для задач обработки спутниковых снимков Земли.
 \end{enumerate}
 
-TODO доделать методы исследования пересмотреть
+TODO доделать методы и практическую значимость
 
-Методы исследования. В работе используются методы теории цифровой обработки сигналов и изображений, методы машинного обучения, в частности глубокие нейронные сети (CNN, GAN), а также методы статистического анализа данных для оценки качества работы алгоритмов. Реализация практической части выполняется с использованием языка программирования Python и специализированных библиотек компьютерного зрения.
+Методы исследования 
 
-Практическая значимость работы заключается в том, что полученные результаты и разработанные программные модули могут быть использованы для улучшения качества архивных спутниковых снимков, подготовки данных для систем автоматического распознавания объектов.
+Практическая значимость
 
 \newpage
 
@@ -87,13 +87,13 @@ $$ I_{LR} = (I_{HR}) \downarrow_s $$
 
 $$ I_{SR} = F(I_{LR}) \approx I_{HR} $$
 
-TODO пересмотреть потери и метрики
+TODO сделать потери и метрики
 
 Задача сводится к минимизации функции потерь $\mathcal{L}$ между восстановленным и эталонным изображениями. В случае использования методов глубокого обучения (нейронных сетей) происходит поиск оптимальных весовых коэффициентов $\theta$ сети:
 
 $$ \hat{\theta} = \arg \min_{\theta} \frac{1}{N} \sum_{i=1}^{N} \mathcal{L}(F(I_{LR}^{(i)}; \theta), I_{HR}^{(i)}) $$
 
-Где $N$ — количество изображений в обучающем наборе данных. В качестве функции потерь $\mathcal{L}$ могут выступать попиксельные метрики (MSE, MAE) для обеспечения точного цветового соответствия, либо более сложные перцептивные метрики (Perceptual Loss, Adversarial Loss) для улучшения визуального восприятия текстур ландшафта.
+Где $N$ — количество изображений в обучающем наборе данных.
 
 \newpage
 
@@ -124,7 +124,7 @@ $$
 
 \subsection{Интерполяция Ланцоша}
 
-Метод Ланцоша (Lanczos resampling) считается одним из лучших классических алгоритмов для изменения размера изображений, обеспечивая высокий уровень четкости ("резкости") границ объектов. В его основе лежит математический аппарат оконных функций и использования кардинального синуса (Sinc).
+Метод Ланцоша (Lanczos resampling) считается одним из лучших классических алгоритмов для изменения размера изображений, обеспечивая высокий уровень четкости ("резкости") границ объектов.
 
 Ядро фильтра Ланцоша $L(x)$ представляет собой функцию Sinc, ограниченную оконной функцией того же типа. Формула для вычисления весовых коэффициентов имеет вид:
 
@@ -141,7 +141,7 @@ $$ \text{sinc}(x) = \frac{\sin(\pi x)}{\pi x} $$
 
 В рамках данной работы используется конфигурация Lanczos-3 (параметр $a=3$). Это означает, что для вычисления значения одного пикселя результирующего изображения используется информация из окрестности размером $2a \times 2a$, то есть $6 \times 6$ пикселей исходного изображения (диапазон $x$ от $-3$ до $3$).
 
-Суть алгоритма заключается в вычислении взвешенной суммы интенсивностей соседних пикселей, где веса зависят от расстояния до центра интерполяции и рассчитываются по приведенной формуле ядра $L(x)$. Метод Ланцоша позволяет минимизировать эффект алиасинга (ступенчатости наклонных линий), однако требует больших вычислительных ресурсов по сравнению с бикубической интерполяцией из-за более широкого окна выборки и сложности вычисления тригонометрических функций.
+Суть алгоритма заключается в вычислении взвешенной суммы интенсивностей соседних пикселей, где веса зависят от расстояния до центра интерполяции и рассчитываются по приведенной формуле ядра $L(x)$. Метод Ланцоша позволяет минимизировать эффект алиасинга, однако требует больших вычислительных ресурсов по сравнению с бикубической интерполяцией из-за более широкого окна выборки и сложности вычисления тригонометрических функций.
 
 \newpage
 
@@ -169,7 +169,6 @@ $$ F(Y) = W_3 * \phi(W_2 * \phi(W_1 * Y + B_1) + B_2) + B_3 $$
 
 \begin{figure}[h!]
 	\centering
-	% Вставь сюда имя файла с архитектурой SRCNN
 	%\includegraphics[width=0.9\linewidth]{srcnn_architecture.jpg}
 	\caption{Архитектура сети SRCNN}
 	%\label{fig:srcnn}
@@ -177,7 +176,9 @@ $$ F(Y) = W_3 * \phi(W_2 * \phi(W_1 * Y + B_1) + B_2) + B_3 $$
 
 Несмотря на высокое качество работы по сравнению с классическими методами, SRCNN имеет существенный недостаток: высокая вычислительная сложность. Поскольку сеть обрабатывает изображение уже в высоком разрешении, количество операций свертки значительно возрастает пропорционально квадрату коэффициента масштабирования $s^2$.
 
-Для решения этой проблемы и ускорения обработки в данной курсовой работе выбран и реализован метод FSRCNN (Fast Super-Resolution Convolutional Neural Network) [2].
+Еще одним узким местом является использование неглубокого метода для изначального увеличения разрешения изображения перед подачей в сеть.
+
+Для решения этих проблем и ускорения обработки в данной курсовой работе выбран и реализован метод FSRCNN (Fast Super-Resolution Convolutional Neural Network) [2].
 
 Ключевое отличие FSRCNN заключается в том, что сеть принимает на вход оригинальное изображение низкого разрешения без предварительной интерполяции. Увеличение размерности происходит только на самом последнем слое с помощью операции деконволюции (transposed convolution). Это позволяет проводить все нелинейные преобразования в пространстве низкой размерности, что существенно снижает вычислительные затраты.
 
@@ -194,9 +195,8 @@ $$ F(Y) = W_3 * \phi(W_2 * \phi(W_1 * Y + B_1) + B_2) + B_3 $$
 
 \begin{figure}[H]
 	\centering
-	% Вставь сюда имя файла с архитектурой FSRCNN
 	%\includegraphics[width=0.9\linewidth]{fsrcnn_architecture.jpg}
-	%\caption{Архитектура сети FSRCNN}
+	\caption{Архитектура сети FSRCNN}
 	%\label{fig:fsrcnn}
 \end{figure}
 
@@ -207,7 +207,7 @@ $$ F(Y) = W_3 * \phi(W_2 * \phi(W_1 * Y + B_1) + B_2) + B_3 $$
 TODO сделать по госту
 \begin{enumerate}[label={[\arabic*]}]
 	\item Dong C., Loy C. C., He K., Tang X. Image super-resolution using deep convolutional networks // IEEE transactions on pattern analysis and machine intelligence. – 2015. – Vol. 38. – №. 2. – P. 295-307.
-	\item TODO: fsrcnn work 
+	\item fsrcnn work 
 	\item Wang X. et al. Esrgan: Enhanced super-resolution generative adversarial networks // Proceedings of the European conference on computer vision (ECCV) workshops. – 2018.
 \end{enumerate}
 
