add fsrcnn model

--- a/DL_algos/fsrcnn.ipynb
+++ b/DL_algos/fsrcnn.ipynb
@@ -25,7 +25,7 @@
     "import classic_algos.bicubic_interpolation as bicubic\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(device)"
+    "print(device )"
    ],
    "outputs": [
     {
@@ -95,6 +95,69 @@
     "        return lr_tensor, hr_tensor"
    ],
    "id": "ba4bbeb2195c07a1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "class FSRCNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        d: filters dimension\n",
+    "        s: shrinking dimension\n",
+    "        m: mapping layers number\n",
+    "        \"\"\"\n",
+    "        d, s, m = 56, 12, 4\n",
+    "        scale_factor = 3\n",
+    "        channels = 3\n",
+    "        super(FSRCNN, self).__init__()\n",
+    "\n",
+    "        self.feature_extraction = nn.Sequential(\n",
+    "            nn.Conv2d(channels, d, kernel_size=5, padding=2),\n",
+    "            nn.PReLU(d)\n",
+    "        )\n",
+    "\n",
+    "        self.shrink = nn.Sequential(\n",
+    "            nn.Conv2d(d, s, kernel_size=1),\n",
+    "            nn.PReLU(s)\n",
+    "        )\n",
+    "\n",
+    "        map_layers = []\n",
+    "        for _ in range(m):\n",
+    "            map_layers.extend([nn.Conv2d(s, s, kernel_size=3, padding=1),\n",
+    "                               nn.PReLU(s)\n",
+    "            ])\n",
+    "        self.mapping = nn.Sequential(*map_layers)\n",
+    "\n",
+    "        self.expand = nn.Sequential(\n",
+    "            nn.Conv2d(s, d, kernel_size=1),\n",
+    "            nn.PReLU(d)\n",
+    "        )\n",
+    "\n",
+    "        self.deconv = nn.ConvTranspose2d(d, channels,\n",
+    "                                         kernel_size=9,\n",
+    "                                         stride=3,\n",
+    "                                         padding=3,\n",
+    "        )\n",
+    "\n",
+    "        self._initialize_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.feature_extraction(x)\n",
+    "        x = self.shrink(x)\n",
+    "        x = self.mapping(x)\n",
+    "        x = self.expand(x)\n",
+    "        x = self.deconv(x)\n",
+    "        return x\n",
+    "\n",
+    "    def _initialize_weights(self):\n",
+    "        for m in self.modules():\n",
+    "            if isinstance(m, nn.Conv2d) or isinstance(m, nn.ConvTranspose2d):\n",
+    "                nn.init.normal_(m.weight.data, mean=0.0, std=0.001)\n"
+   ],
+   "id": "f8c494750ce5bb31"
   }
  ],
  "metadata": {
