--- a/DL_algos/y_rcan.ipynb
+++ b/DL_algos/y_rcan.ipynb
@@ -25,6 +25,7 @@
     "import random\n",
     "from pathlib import Path\n",
     "import torch.backends.cudnn as cudnn\n",
+    "from skimage.color import rgb2ycbcr\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
@@ -82,7 +83,7 @@
    },
    "cell_type": "code",
    "source": [
-    "class SatelliteSRDataset(Dataset):\n",
+    "class SatelliteSRDataset_Y(Dataset):\n",
     "    def __init__(self, root_dir, hr_patch_size=144, augment=True):\n",
     "        super().__init__()\n",
     "        self.root_dir = root_dir\n",
@@ -96,9 +97,15 @@
     "    def __getitem__(self, idx):\n",
     "        img_path = self.file_paths[idx]\n",
     "        with rasterio.open(img_path) as src:\n",
-    "            image = src.read()  # C x H x W\n",
+    "            image = src.read() # C x H x W\n",
     "\n",
-    "        image_norm = image.astype(np.float32) / 255.0\n",
+    "        image_hwc = np.transpose(image, (1, 2, 0)).astype(np.uint8)\n",
+    "\n",
+    "        image_y = rgb2ycbcr(image_hwc)[:, :, 0]\n",
+    "\n",
+    "        image_norm = image_y.astype(np.float32) / 255.0\n",
+    "\n",
+    "        image_norm = image_norm[np.newaxis, :, :]\n",
     "\n",
     "        #random crop\n",
     "        c, h, w = image_norm.shape\n",
@@ -162,9 +169,9 @@
     "        res = self.body(x)\n",
     "        return res + x\n",
     "\n",
-    "class RCAN(nn.Module):\n",
-    "    def __init__(self, num_channels=3, num_res_blocks=16, n_feats=64):\n",
-    "        super(RCAN, self).__init__()\n",
+    "class RCAN_Y(nn.Module):\n",
+    "    def __init__(self, num_channels=1, num_res_blocks=16, n_feats=64):\n",
+    "        super(RCAN_Y, self).__init__()\n",
     "\n",
     "        self.head = nn.Conv2d(num_channels, n_feats, kernel_size=3, padding=1)\n",
     "\n",
@@ -216,12 +223,12 @@
    },
    "cell_type": "code",
    "source": [
-    "train_dataset = SatelliteSRDataset(TRAIN_DIR, hr_patch_size=144, augment=True)\n",
-    "val_dataset = SatelliteSRDataset(VAL_DIR, hr_patch_size=144, augment=False)\n",
+    "train_dataset = SatelliteSRDataset_Y(TRAIN_DIR, hr_patch_size=144, augment=True)\n",
+    "val_dataset = SatelliteSRDataset_Y(VAL_DIR, hr_patch_size=144, augment=False)\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4, pin_memory=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4, pin_memory=True)\n",
     "\n",
-    "model = RCAN(num_res_blocks=16, n_feats=64).to(device)\n",
+    "model = RCAN_Y(num_res_blocks=16, n_feats=64).to(device)\n",
     "\n",
     "criterion = CharbonnierLoss()\n",
     "\n",
@@ -276,7 +283,7 @@
     "\n",
     "    if avg_val_psnr > best_psnr:\n",
     "        best_psnr = avg_val_psnr\n",
-    "        torch.save(model.state_dict(), DATA_DIR / 'rgb_rcan_best_model.pth.pth')\n",
+    "        torch.save(model.state_dict(), DATA_DIR / 'rgb_RCAN_Y_best_model.pth.pth')\n",
     "        print(f\"  [!] New Best PSNR: {best_psnr:.2f} dB saved.\")\n",
     "\n",
     "    if epoch % 20 == 0:\n",
@@ -326,11 +333,11 @@
    "source": [
     "ZOOM_PATCH_SIZE = 144\n",
     "SCALE_Y = 2\n",
-    "MODEL_ARCH = RCAN\n",
-    "N_CHANNELS = 3\n",
+    "MODEL_ARCH = RCAN_Y\n",
+    "N_CHANNELS = 1\n",
     "N_RES_BLOCKS = 16\n",
     "N_FEATS = 64\n",
-    "MODEL_PATH = Path.home() / '.data' / 'rgb_rcan_best_model.pth'\n",
+    "MODEL_PATH = Path.home() / '.data' / 'y_RCAN_Y_best_model.pth'\n",
     "RANDOM_CROP = False\n",
     "\n",
     "full_idx = random.randint(0, len(val_dataset.file_paths) - 1)\n",
@@ -338,23 +345,26 @@
     "print(f\"File: {img_path}\")\n",
     "\n",
     "with rasterio.open(img_path) as src:\n",
-    "    image_rgb = src.read() # (C, H, W)\n",
+    "    image_rgb_chw = src.read()\n",
     "\n",
-    "image_rgb = image_rgb.astype(np.float32) / 255.0\n",
+    "image_rgb_hwc = np.transpose(image_rgb_chw, (1, 2, 0)).astype(np.uint8)\n",
+    "image_y = rgb2ycbcr(image_rgb_hwc)[:, :, 0]\n",
+    "image_y = image_y.astype(np.float32) / 255.0\n",
     "\n",
-    "\n",
-    "C, H, W = image_rgb.shape\n",
+    "H, W = image_y.shape\n",
+    "H = H - (H % SCALE_Y)\n",
+    "W = W - (W % SCALE_Y)\n",
+    "image_y = image_y[:H, :W]\n",
     "\n",
     "lr_h = H // SCALE_Y\n",
     "lr_w = W // SCALE_Y\n",
     "\n",
-    "image_rgb_hwc = np.transpose(image_rgb, (1, 2, 0)) # (H, W, C)\n",
+    "image_y_hwc = image_y[:, :, np.newaxis]\n",
+    "lr_y_hwc = bicubic.SR_bicubic(image_y_hwc, lr_w, lr_h,\n",
+    "                              preserve_range=True, output_dtype=np.float32)\n",
     "\n",
-    "lr_rgb_hwc = bicubic.SR_bicubic(image_rgb_hwc, lr_w, lr_h,\n",
-    "                                preserve_range=True, output_dtype=np.float32)\n",
-    "\n",
-    "lr_rgb_chw = np.transpose(lr_rgb_hwc, (2, 0, 1))\n",
-    "lr_tensor = torch.from_numpy(lr_rgb_chw).unsqueeze(0).float().to(device) # (1, C, H, W)\n",
+    "lr_y_chw = np.transpose(lr_y_hwc, (2, 0, 1))\n",
+    "lr_tensor = torch.from_numpy(lr_y_chw).unsqueeze(0).float().to(device)\n",
     "\n",
     "model_vis = MODEL_ARCH(num_channels=N_CHANNELS,\n",
     "                       num_res_blocks=N_RES_BLOCKS, n_feats=N_FEATS).to(device)\n",
@@ -367,16 +377,16 @@
     "    print(f\"ERROR loading model: {e}\")\n",
     "\n",
     "with torch.no_grad():\n",
-    "    sr_model_tensor = model_vis(lr_tensor) # (1, C, H, W)\n",
+    "    sr_model_tensor = model_vis(lr_tensor)\n",
     "\n",
-    "sr_bicubic_hwc = bicubic.SR_bicubic(lr_rgb_hwc, H, W,\n",
+    "sr_bicubic_hwc = bicubic.SR_bicubic(lr_y_hwc, H, W,\n",
     "                                    preserve_range=True, output_dtype=np.float32)\n",
-    "sr_lanczos_hwc = lanczos.SR_lanczos(lr_rgb_hwc, H, W,\n",
+    "sr_lanczos_hwc = lanczos.SR_lanczos(lr_y_hwc, H, W,\n",
     "                                    preserve_range=True, output_dtype=np.float32)\n",
     "\n",
-    "sr_bicubic_tensor = torch.from_numpy(np.transpose(sr_bicubic_hwc, (2, 0, 1))).unsqueeze(0).to(device) # (H, W, C) -> (1, C, H, W)\n",
+    "sr_bicubic_tensor = torch.from_numpy(np.transpose(sr_bicubic_hwc, (2, 0, 1))).unsqueeze(0).to(device)\n",
     "sr_lanczos_tensor = torch.from_numpy(np.transpose(sr_lanczos_hwc, (2, 0, 1))).unsqueeze(0).to(device)\n",
-    "hr_tensor = torch.from_numpy(image_rgb).unsqueeze(0).to(device)\n",
+    "hr_tensor = torch.from_numpy(image_y).unsqueeze(0).unsqueeze(0).to(device)\n",
     "\n",
     "psnr_model = PSNR(sr_model_tensor, hr_tensor).item()\n",
     "psnr_bicubic = PSNR(sr_bicubic_tensor, hr_tensor).item()\n",
@@ -390,9 +400,8 @@
     "    left = max((W - ZOOM_PATCH_SIZE) // 2, 0)\n",
     "\n",
     "def get_crops(tensor_img):\n",
-    "    full = tensor_img.squeeze().detach().cpu().numpy() # (1, C, H, W) -> (C, H, W)\n",
-    "    full = np.transpose(full, (1, 2, 0)) # (H, W, C)\n",
-    "    crop = full[top:top+ZOOM_PATCH_SIZE, left:left+ZOOM_PATCH_SIZE, :]\n",
+    "    full = tensor_img.squeeze().detach().cpu().numpy()\n",
+    "    crop = full[top:top+ZOOM_PATCH_SIZE, left:left+ZOOM_PATCH_SIZE]\n",
     "    return full, crop\n",
     "\n",
     "hr_full, hr_crop = get_crops(hr_tensor)\n",
@@ -401,15 +410,15 @@
     "la_full, la_crop = get_crops(sr_lanczos_tensor)\n",
     "\n",
     "fig, axes = plt.subplots(2, 4)\n",
-    "model_name = \"RGB RCAN\"\n",
+    "model_name = \"Y-channel RCAN\"\n",
     "\n",
-    "fig.suptitle(f'RGB SR: {Path(img_path).name}\\nPSNR (full) — {model_name}: {psnr_model:.2f} | Bicubic: {psnr_bicubic:.2f} | Lanczos: {psnr_lanczos:.2f}')\n",
+    "fig.suptitle(f'Y-channel SR: {Path(img_path).name}\\nPSNR (full) — {model_name}: {psnr_model:.2f} | Bicubic: {psnr_bicubic:.2f} | Lanczos: {psnr_lanczos:.2f}')\n",
     "\n",
     "imgs_full = [hr_full, sr_full, bi_full, la_full]\n",
     "titles = ['Original HR', f'{model_name} (Ours)', 'Bicubic', 'Lanczos']\n",
     "\n",
     "for ax, img, title in zip(axes[0], imgs_full, titles):\n",
-    "    ax.imshow(np.clip(img, 0, 1))\n",
+    "    ax.imshow(np.clip(img, 0, 1), cmap='gray')\n",
     "    ax.axis('off')\n",
     "    ax.set_title(title)\n",
     "\n",
@@ -417,7 +426,7 @@
     "titles_zoom = ['Zoom HR', f'Zoom {model_name}', 'Zoom Bicubic', 'Zoom Lanczos']\n",
     "\n",
     "for ax, img, title in zip(axes[1], imgs_crop, titles_zoom):\n",
-    "    ax.imshow(np.clip(img, 0, 1))\n",
+    "    ax.imshow(np.clip(img, 0, 1), cmap='gray')\n",
     "    ax.axis('off')\n",
     "    ax.set_title(title)\n",
     "\n",
