--- a/DL_algos/rgb_rcan.ipynb
+++ b/DL_algos/rgb_rcan.ipynb
@@ -221,11 +221,11 @@
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4, pin_memory=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4, pin_memory=True)\n",
     "\n",
-    "model = RCAN(num_res_blocks=16, n_feats=64).to(device)\n",
+    "model = RCAN().to(device)\n",
     "\n",
     "criterion = CharbonnierLoss()\n",
     "\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4, betas=(0.9, 0.999))\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=10)\n"
    ],
    "id": "87fadca667d5360e",
@@ -276,11 +276,11 @@
     "\n",
     "    if avg_val_psnr > best_psnr:\n",
     "        best_psnr = avg_val_psnr\n",
-    "        torch.save(model.state_dict(), DATA_DIR / 'rgb_rcan_best_model.pth.pth')\n",
+    "        torch.save(model.state_dict(), DATA_DIR / 'rgb_rcan_best_model.pth')\n",
     "        print(f\"  [!] New Best PSNR: {best_psnr:.2f} dB saved.\")\n",
     "\n",
     "    if epoch % 20 == 0:\n",
-    "         torch.save(model.state_dict(), MODEL_DIR / f'rgb_cooler_checkpoint_{epoch}.pth')\n",
+    "         torch.save(model.state_dict(), MODEL_DIR / f'rgb_rcan_checkpoint_{epoch}.pth')\n",
     "\n",
     "print(\"training complete.\")\n"
    ],
