--- a/DL_algos/y_rcan.ipynb
+++ b/DL_algos/y_rcan.ipynb
@@ -228,11 +228,11 @@
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4, pin_memory=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4, pin_memory=True)\n",
     "\n",
-    "model = RCAN_Y(num_res_blocks=16, n_feats=64).to(device)\n",
+    "model = RCAN_Y().to(device)\n",
     "\n",
     "criterion = CharbonnierLoss()\n",
     "\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4, betas=(0.9, 0.999))\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=10)\n"
    ],
    "id": "87fadca667d5360e",
@@ -283,11 +283,11 @@
     "\n",
     "    if avg_val_psnr > best_psnr:\n",
     "        best_psnr = avg_val_psnr\n",
-    "        torch.save(model.state_dict(), DATA_DIR / 'rgb_RCAN_Y_best_model.pth.pth')\n",
+    "        torch.save(model.state_dict(), DATA_DIR / 'y_rcan_best_model.pth')\n",
     "        print(f\"  [!] New Best PSNR: {best_psnr:.2f} dB saved.\")\n",
     "\n",
     "    if epoch % 20 == 0:\n",
-    "         torch.save(model.state_dict(), MODEL_DIR / f'rgb_cooler_checkpoint_{epoch}.pth')\n",
+    "         torch.save(model.state_dict(), MODEL_DIR / f'y_rcan_checkpoint_{epoch}.pth')\n",
     "\n",
     "print(\"training complete.\")\n"
    ],
@@ -337,7 +337,7 @@
     "N_CHANNELS = 1\n",
     "N_RES_BLOCKS = 16\n",
     "N_FEATS = 64\n",
-    "MODEL_PATH = Path.home() / '.data' / 'y_RCAN_Y_best_model.pth'\n",
+    "MODEL_PATH = Path.home() / '.data' / 'y_rcan_best_model.pth'\n",
     "RANDOM_CROP = False\n",
     "\n",
     "full_idx = random.randint(0, len(val_dataset.file_paths) - 1)\n",
@@ -410,9 +410,9 @@
     "la_full, la_crop = get_crops(sr_lanczos_tensor)\n",
     "\n",
     "fig, axes = plt.subplots(2, 4)\n",
-    "model_name = \"Y-channel RCAN\"\n",
+    "model_name = \"Y RCAN\"\n",
     "\n",
-    "fig.suptitle(f'Y-channel SR: {Path(img_path).name}\\nPSNR (full) — {model_name}: {psnr_model:.2f} | Bicubic: {psnr_bicubic:.2f} | Lanczos: {psnr_lanczos:.2f}')\n",
+    "fig.suptitle(f'Y SR: {Path(img_path).name}\\nPSNR (full) — {model_name}: {psnr_model:.2f} | Bicubic: {psnr_bicubic:.2f} | Lanczos: {psnr_lanczos:.2f}')\n",
     "\n",
     "imgs_full = [hr_full, sr_full, bi_full, la_full]\n",
     "titles = ['Original HR', f'{model_name} (Ours)', 'Bicubic', 'Lanczos']\n",
